// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cross stack references synth generates JSON 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"source\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"random\\": {
        \\"version\\": \\"= 3.1.0\\",
        \\"source\\": \\"hashicorp/random\\"
      },
      \\"local\\": {
        \\"version\\": \\"=2.1.0\\",
        \\"source\\": \\"hashicorp/local\\"
      }
    },
    \\"backend\\": {
      \\"local\\": {}
    }
  },
  \\"provider\\": {
    \\"random\\": [
      {}
    ],
    \\"local\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"random_integer\\": {
      \\"int\\": {
        \\"max\\": 6,
        \\"min\\": 0,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"source/int\\",
            \\"uniqueId\\": \\"int\\"
          }
        }
      }
    },
    \\"random_password\\": {
      \\"str\\": {
        \\"length\\": 32,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"source/str\\",
            \\"uniqueId\\": \\"str\\"
          }
        }
      }
    },
    \\"local_file\\": {
      \\"originNum\\": {
        \\"content\\": \\"random_integer.int.result\\",
        \\"filename\\": \\"originNum\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"source/originNum\\",
            \\"uniqueId\\": \\"originNum\\"
          }
        }
      },
      \\"originStr\\": {
        \\"content\\": \\"\${random_password.str.result}\\",
        \\"filename\\": \\"originStr\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"source/originStr\\",
            \\"uniqueId\\": \\"originStr\\"
          }
        }
      }
    }
  },
  \\"output\\": {
    \\"crossstackoutputrandomintegerintresult\\": {
      \\"value\\": \\"\${random_integer.int.result}\\",
      \\"sensitive\\": true
    },
    \\"crossstackoutputrandompasswordstrresult\\": {
      \\"value\\": \\"\${random_password.str.result}\\",
      \\"sensitive\\": true
    }
  }
}"
`;

exports[`cross stack references synth generates JSON 2`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"passthrough\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"random\\": {
        \\"version\\": \\"= 3.1.0\\",
        \\"source\\": \\"hashicorp/random\\"
      },
      \\"local\\": {
        \\"version\\": \\"=2.1.0\\",
        \\"source\\": \\"hashicorp/local\\"
      }
    }
  },
  \\"provider\\": {
    \\"random\\": [
      {}
    ],
    \\"local\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"local_file\\": {
      \\"passthroughNum\\": {
        \\"content\\": \\"\${data.terraform_remote_state.crossstackreferenceinputsource.outputs.crossstackoutputrandomintegerintresult}\\",
        \\"filename\\": \\"passthroughNum\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"passthrough/passthroughNum\\",
            \\"uniqueId\\": \\"passthroughNum\\"
          }
        }
      },
      \\"passthroughStr\\": {
        \\"content\\": \\"\${\${data.terraform_remote_state.crossstackreferenceinputsource.outputs.crossstackoutputrandompasswordstrresult}}\\",
        \\"filename\\": \\"passthroughStr\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"passthrough/passthroughStr\\",
            \\"uniqueId\\": \\"passthroughStr\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"terraform_remote_state\\": {
      \\"crossstackreferenceinputsource\\": {
        \\"backend\\": \\"local\\",
        \\"config\\": {
          \\"path\\": \\"/tmp/testrglGrf/terraform.source.tfstate\\"
        }
      }
    }
  }
}"
`;

exports[`cross stack references synth generates JSON 3`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"sink\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"random\\": {
        \\"version\\": \\"= 3.1.0\\",
        \\"source\\": \\"hashicorp/random\\"
      },
      \\"local\\": {
        \\"version\\": \\"=2.1.0\\",
        \\"source\\": \\"hashicorp/local\\"
      }
    }
  },
  \\"provider\\": {
    \\"random\\": [
      {}
    ],
    \\"local\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"local_file\\": {
      \\"sinkNum\\": {
        \\"content\\": \\"\${sum([\${data.terraform_remote_state.crossstackreferenceinputsource.outputs.crossstackoutputrandomintegerintresult}, \${data.terraform_remote_state.crossstackreferenceinputsource.outputs.crossstackoutputrandomintegerintresult}])}\\",
        \\"filename\\": \\"sinkNum\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"sink/sinkNum\\",
            \\"uniqueId\\": \\"sinkNum\\"
          }
        }
      },
      \\"sinkStr\\": {
        \\"content\\": \\"\${\${data.terraform_remote_state.crossstackreferenceinputsource.outputs.crossstackoutputrandompasswordstrresult}}\\",
        \\"filename\\": \\"sinkStr\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"sink/sinkStr\\",
            \\"uniqueId\\": \\"sinkStr\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"terraform_remote_state\\": {
      \\"crossstackreferenceinputsource\\": {
        \\"backend\\": \\"local\\",
        \\"config\\": {
          \\"path\\": \\"/tmp/testrglGrf/terraform.source.tfstate\\"
        }
      }
    }
  }
}"
`;

exports[`cross stack references synth generates JSON 4`] = `
"{
  \\"version\\": \\"stubbed\\",
  \\"stacks\\": {
    \\"source\\": {
      \\"name\\": \\"source\\",
      \\"constructPath\\": \\"source\\",
      \\"workingDirectory\\": \\"stacks/source\\",
      \\"synthesizedStackPath\\": \\"stacks/source/cdk.tf.json\\",
      \\"annotations\\": [],
      \\"dependencies\\": []
    },
    \\"passthrough\\": {
      \\"name\\": \\"passthrough\\",
      \\"constructPath\\": \\"passthrough\\",
      \\"workingDirectory\\": \\"stacks/passthrough\\",
      \\"synthesizedStackPath\\": \\"stacks/passthrough/cdk.tf.json\\",
      \\"annotations\\": [],
      \\"dependencies\\": [
        \\"source\\"
      ]
    },
    \\"sink\\": {
      \\"name\\": \\"sink\\",
      \\"constructPath\\": \\"sink\\",
      \\"workingDirectory\\": \\"stacks/sink\\",
      \\"synthesizedStackPath\\": \\"stacks/sink/cdk.tf.json\\",
      \\"annotations\\": [],
      \\"dependencies\\": [
        \\"source\\"
      ]
    }
  }
}"
`;
